--- a/roles/apache-debian/tasks/main.yml
+++ b/roles/apache-debian/tasks/main.yml
@@ -10,3 +10,7 @@
     name: apache2
     state: started
     enabled: yes
+#3. Cette tâche fait appel à un autre fichier de configuration pour installer PHP. Elle est exécutée uniquement si la variable php_install est à vraie (par défaut, elle est à faux)
+- name: install php7-4 packages
+  include: php-7-4_install.yml
+  when: php_install|default(False)|bool
